testsuite/poke.pkl/mod-integers-overflow-diag-1.pk
/* { dg-do compile } */

var res
  = 0x8000_0000_0000_0000L % -1; /* { dg-error "overflow" } */
